# camp_react

./: medical.py  netlify.toml  package.json  pyproject.toml  requirements.txt
public/: index.html
src/: .~lock.Medical.ods#  App.css  App.js  AppBody.css  AppBody.js  AppFooter.css  AppFooter.js  AppHeader.css  AppHeader.js  AppSubheader.css  AppSubheader.js  Medical.ods  Navbar.css  Navbar.js  index.js
src/Aktuelles/: Aktuelles.css  Aktuelles.js  AktuellesAnswer.css  AktuellesAnswer.js  AktuellesBody.css  AktuellesBody.js  AktuellesBodyAnswer.css  AktuellesBodyAnswer.js  AktuellesFooter.css  AktuellesFooter.js  AktuellesHeader.css  AktuellesHeader.js  AktuellesSubheader.css  AktuellesSubheader.js  AktuellesSubheaderAnswer.css  AktuellesSubheaderAnswer.js  RandomAnswer.js  RandomQuestion.js
src/Home/: Home.css  Home.js  HomeBody.css  HomeBody.js  HomeFooter.css  HomeFooter.js  HomeHeader.css  HomeHeader.js  HomeSubheader.css  HomeSubheader.js
